--- a/src/app/shared/shared-components/card/card.component.scss
+++ b/src/app/shared/shared-components/card/card.component.scss
@@ -3,5 +3,10 @@ mat-card{
 
     mat-card-content{
         flex: 1;
+        overflow: auto;
+    }
+
+    mat-card-footer{
+        display: flex;
     }
 }
