--- a/src/app/shared/shared-components/contact/contact.component.html
+++ b/src/app/shared/shared-components/contact/contact.component.html
@@ -1,23 +1,7 @@
 <button *ngIf="!selected" mat-stroked-button>
-    <div class="contact-container" subtitle>
-        <div class="contact-initials">
-            {{contact.name[0]}}
-        </div>
-        <div class="text-left">
-            <div>{{contact.name}}</div>
-            <a class="contact-mail" (click)="$event.stopPropagation()" href="mailto: {{contact.email}}">{{contact.email}}</a>
-        </div>
-    </div>
+    <app-contact-card [contact]="contact" subtitle></app-contact-card>
 </button>
 
 <button *ngIf="selected" mat-raised-button color="primary">
-    <div class="contact-container" subtitle>
-        <div class="contact-initials">
-            {{contact.name[0]}}
-        </div>
-        <div class="text-left">
-            <div>{{contact.name}}</div>
-            <a class="contact-mail" (click)="$event.stopPropagation()" href="mailto: {{contact.email}}">{{contact.email}}</a>
-        </div>
-    </div>
+    <app-contact-card [contact]="contact" subtitle></app-contact-card>
 </button>
