--- a/src/app/shared/shared-components/dialogs/add-contact/add-contact.component.html
+++ b/src/app/shared/shared-components/dialogs/add-contact/add-contact.component.html
@@ -15,7 +15,7 @@
 
         <app-form-field [errors]="[{name: 'required', htmlMessage: 'Phone Number is <strong>required</strong>'}]"
             [autocomplete]="'contact-phone'" [type]="'tel'" [inputType]="'input'"
-            [suffixPath]="'assets/phone.svg'" [control]="$any(addContactForm.get('phoneNumber'))"
+            [suffixPath]="'assets/phone.svg'" [control]="$any(addContactForm.get('phone_number'))"
             [labelName]="'Phone'"></app-form-field>
 
         <!-- <mat-expansion-panel>
