--- a/src/app/shared/shared-components/contact-details/contact-details.component.html
+++ b/src/app/shared/shared-components/contact-details/contact-details.component.html
@@ -6,11 +6,22 @@
         </svg>
         Add task
     </button>
+    <button mat-button (click)="editContact()">
+        <svg width="17" height="17" viewBox="0 0 21 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M2.87121 22.0156L7.69054 24.9405L20.3337 4.10842C20.6203 3.63628 20.4698 3.02125 19.9977 2.73471L16.8881 0.847482C16.4159 0.56094 15.8009 0.711391 15.5144 1.18353L2.87121 22.0156Z"
+                fill="#2A3647" />
+            <path d="M2.28614 22.9794L7.10547 25.9043L2.37685 28.1892L2.28614 22.9794Z" fill="#2A3647" />
+        </svg>
+
+        Edit Contact
+    </button>
 </app-contact-card>
 
 <ng-container>
     <p>Contact Information</p>
-
+    <div><b>Name</b></div>
+    <div>{{contact?.name}}</div>
     <div><b>Email</b></div>
     <app-email-link [email]="contact?.email"></app-email-link>
     <div><b>Phone </b></div>
