--- a/src/app/shared/shared-components/dialogs/edit-contact/edit-contact.component.html
+++ b/src/app/shared/shared-components/dialogs/edit-contact/edit-contact.component.html
@@ -3,17 +3,18 @@
 
     <form class="main-content" [formGroup]="editContactForm">
 
-        <app-form-field [required]="false" [autocomplete]="'contact-name'" [type]="'text'" [inputType]="'input'"
-            [suffixPath]="'assets/person.svg'" [control]="$any(editContactForm.get('name'))"
-            [labelName]="'Name'"></app-form-field>
+        <app-form-field [errors]="[{name: 'required', htmlMessage: 'Name is <strong>required</strong>'}]"
+            [autocomplete]="'contact-name'" [type]="'text'" [inputType]="'input'" [suffixPath]="'assets/person.svg'"
+            [control]="$any(editContactForm.get('name'))" [labelName]="'Name'"></app-form-field>
 
-        <app-form-field [required]="false" [autocomplete]="'contact-email'" [type]="'email'" [inputType]="'input'"
-            [suffixPath]="'assets/mail.svg'" [control]="$any(editContactForm.get('email'))"
-            [labelName]="'Email'"></app-form-field>
+        <app-form-field [errors]="[{name: 'required', htmlMessage: 'Email is <strong>required</strong>'},
+            {name: 'email', htmlMessage: 'Please enter a valid email address'}]" [autocomplete]="'contact-email'"
+            [type]="'email'" [inputType]="'input'" [suffixPath]="'assets/mail.svg'"
+            [control]="$any(editContactForm.get('email'))" [labelName]="'Email'"></app-form-field>
 
-        <app-form-field [required]="false" [autocomplete]="'contact-phone'" [type]="'tel'" [inputType]="'input'"
-            [suffixPath]="'assets/phone.svg'" [control]="$any(editContactForm.get('phone_number'))"
-            [labelName]="'Phone'"></app-form-field>
+        <app-form-field [errors]="[{name: 'required', htmlMessage: 'Phone Number is <strong>required</strong>'}]"
+            [autocomplete]="'contact-phone'" [type]="'tel'" [inputType]="'input'" [suffixPath]="'assets/phone.svg'"
+            [control]="$any(editContactForm.get('phone_number'))" [labelName]="'Phone'"></app-form-field>
 
         <!-- <mat-expansion-panel>
             <mat-expansion-panel-header>
