--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,20 @@ body{
     margin: 0;
     height: 100vh;
 }
+
+.category-option{
+    display: flex;
+    gap: 16px;
+}
+
+.category-color{
+    border-radius: 100%;
+    width: 1em;
+    height: 1em;
+    border: 1px solid white;
+}
+
+.priority-option{
+    display: flex;
+    gap: 16px;
+}
