--- a/src/app/admin/add-task/add-task.component.scss
+++ b/src/app/admin/add-task/add-task.component.scss
@@ -3,6 +3,25 @@
     padding: 16px 0;
 }
 
+.footer {
+    display: grid;
+    grid-gap: 35px;
+    padding: 16px;
+
+    margin-left: auto;
+
+    .simple-grid {
+        display: flex;
+        gap: 35px;
+        flex-wrap: wrap;
+
+        button,
+        a {
+            width: fit-content;
+        }
+    }
+}
+
 .main-content{
     gap: 12px;
     margin-top: 35px;
