--- a/src/app/shared/shared-components/contact-details/contact-details.component.html
+++ b/src/app/shared/shared-components/contact-details/contact-details.component.html
@@ -26,6 +26,6 @@
         <p><b>Email</b></p>
         <app-email-link [email]="contact?.email"></app-email-link>
         <p><b>Phone </b></p>
-        <a>{{contact?.phone_number}}</a>
+        <a>{{contact?.phoneNumber}}</a>
     </div>
 </ng-container>
