--- a/src/app/shared/shared-components/dialogs/edit-contact/edit-contact.component.html
+++ b/src/app/shared/shared-components/dialogs/edit-contact/edit-contact.component.html
@@ -14,7 +14,7 @@
 
         <app-form-field [errors]="[{name: 'required', htmlMessage: 'Phone Number is <strong>required</strong>'}]"
             [autocomplete]="'contact-phone'" [type]="'tel'" [inputType]="'input'" [suffixPath]="'assets/phone.svg'"
-            [control]="$any(editContactForm.get('phone_number'))" [labelName]="'Phone'"></app-form-field>
+            [control]="$any(editContactForm.get('phoneNumber'))" [labelName]="'Phone'"></app-form-field>
 
         <!-- <mat-expansion-panel>
             <mat-expansion-panel-header>
