--- a/src/app/admin/board/board.component.scss
+++ b/src/app/admin/board/board.component.scss
@@ -1,4 +1,30 @@
 :host{
-    display: block;
+    display: flex;
     padding: 16px 0;
+    height: 100%;
+    box-sizing: border-box;
+
+    app-card {
+        display: block;
+        height: 100%;
+        width: 100%;
+    }
+}
+
+.new-list {
+    margin-left: auto;
+    &::ng-deep .mdc-button__label {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 6px;
+    }
+}
+
+.board-lists{
+    display: flex;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 100%;
 }
