--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -7,7 +7,7 @@
 
             <div cdkDropList #backlogList="cdkDropList" [cdkDropListData]="backlog"
                 [cdkDropListConnectedTo]="[todoList]" class="drag-drop-list" (cdkDropListDropped)="drop($event)">
-                <div class="drag-drop-box" *ngFor="let item of backlog" cdkDrag>{{item}}</div>
+                <div class="drag-drop-box" *ngFor="let item of backlog; let i = index" cdkDrag>{{i}}{{item | json}}</div>
             </div>
         </div>
 
@@ -16,7 +16,7 @@
 
             <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]"
                 class="drag-drop-list" (cdkDropListDropped)="drop($event)">
-                <div class="drag-drop-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+                <div class="drag-drop-box" *ngFor="let item of todo" cdkDrag>{{item | json}}</div>
             </div>
         </div>
 
@@ -25,7 +25,7 @@
 
             <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]"
                 class="drag-drop-list" (cdkDropListDropped)="drop($event)">
-                <div class="drag-drop-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+                <div class="drag-drop-box" *ngFor="let item of done" cdkDrag>{{item | json}}</div>
             </div>
         </div>
     </div>
