add internal and representation interfaces and convertors

--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -1,13 +1,14 @@
 <app-card>
     <app-page-title title></app-page-title>
 
-    <div class="board-lists">
+    <div *ngIf="board; else createBoard" class="board-lists">
         <div class="drag-drop-container">
             <h2>Backlog</h2>
 
             <div cdkDropList #backlogList="cdkDropList" [cdkDropListData]="backlog"
                 [cdkDropListConnectedTo]="[todoList]" class="drag-drop-list" (cdkDropListDropped)="drop($event)">
-                <div class="drag-drop-box" *ngFor="let item of backlog; let i = index" cdkDrag>{{i}}{{item | json}}</div>
+                <div class="drag-drop-box" *ngFor="let item of backlog; let i = index" cdkDrag>{{i}}{{item | json}}
+                </div>
             </div>
         </div>
 
@@ -30,7 +31,14 @@
         </div>
     </div>
 
-    <button (click)="addList()" class="new-list" footer mat-raised-button color="primary">
+    <ng-template #createBoard>
+        <button (click)="addBoard()" class="new-list" mat-raised-button color="primary">
+            <span>Create Board</span>
+            <img src="assets/plus.svg" alt="">
+        </button>
+    </ng-template>
+
+    <button *ngIf="board" (click)="addList()" class="new-list" footer mat-raised-button color="primary">
         <span>New List</span>
         <img src="assets/plus.svg" alt="">
     </button>
