--- a/src/app/admin/add-task/add-task.component.html
+++ b/src/app/admin/add-task/add-task.component.html
@@ -1,5 +1,5 @@
 <app-card>
-    <app-page-title title></app-page-title>
+    <app-page-title *ngIf="showPageTitle" title></app-page-title>
 
     <form class="main-content" [formGroup]="addTaskForm">
         <div class="form-field-group">
@@ -44,8 +44,8 @@
                 [control]="addSubtaskForm"></app-form-field>
 
             <div>
-                <div *ngFor="let subtask of subtasks$ | async">
-                    <mat-checkbox (change)="handleSelectSubtask(subtask, $event.checked)">
+                <div *ngFor="let subtask of $any(addTaskForm.get('subtasks')?.value)">
+                    <mat-checkbox (value)="subtask.done" [disabled]="true">
                         {{subtask.title}}
                     </mat-checkbox>
                 </div>
@@ -58,9 +58,10 @@
 
         <div class="simple-grid">
             <button (click)="addTaskForm.reset()" mat-stroked-button color="primary">Clear</button>
-            <button [disabled]="addTaskForm.invalid" (click)="addTask()" mat-raised-button color="primary">Create
-                Task</button>
+            <button [disabled]="addTaskForm.invalid" (click)="saveTask()" mat-raised-button color="primary">
+                <span *ngIf="mode == 'add'">Create Task</span>
+                <span *ngIf="mode == 'edit'">Edit Task</span>
+            </button>
         </div>
-
     </div>
 </app-card>
