--- a/src/app/shared/shared-components/task/task.component.scss
+++ b/src/app/shared/shared-components/task/task.component.scss
@@ -2,6 +2,12 @@
     display: block;
 }
 
+.task-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .task-category {
     padding: 4px 25px;
     text-align: center;
