--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 body {
     margin: 0;
     height: 100vh;
+    font-family: 'Inter';
 }
 
 .category-option {
@@ -83,4 +84,18 @@ body {
 
 .custom-margin-top-small{
     margin-top: 20px;
+}
+
+.mat-mdc-card-title, .mat-mdc-dialog-title{
+    @media(max-width: 800px){
+        font-size: 30.5px !important;
+    }
+}
+
+// .mdc-dialog .mdc-dialog__content{
+//     padding: unset !important;
+// }
+
+.cdk-overlay-pane{
+    max-width: 90vw !important;
 }
